fix: text fonts on small screens

--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,14 @@
 #timezone {
     color: silver;
 }
+
+@media screen and (max-width: 600px) {
+    #current-time {
+      font-size: 250%;
+    }
+  
+    #current-date, #timezone {
+      font-size: 65%;
+    }
+  }
+  
